# app

./: .gitignore  Cargo.toml  README.md  index.html  tarpaulin-report.html
assets/: manifest.json  sw.js
src/: app.rs  main.rs
src/controllers/: mod.rs
src/data/: jobs.json
src/i18n/: en.yml  fr.yml
src/models/: application_context.rs  application_options.rs  date_converter.rs  filters.rs  job.rs  mod.rs  parser.rs  updater.rs
src/models/data_structure/: application_context.rs  application_options.rs  cluster.rs  cpu.rs  filters.rs  host.rs  job.rs  mod.rs  resource.rs  strata.rs
src/models/utils/: date_converter.rs  mocker.rs  mod.rs  parser.rs  secret.rs  updater.rs  utils.rs
src/tests/: filters_tests.rs  mod.rs  parser_tests.rs  resource_state_tests.rs  utils_tests.rs
src/views/: dashboard.rs  filtering.rs  gantt.rs  menu.rs  mod.rs  options.rs  view.rs
src/views/components/: gantt_aggregate_by.rs  gantt_grid_spacing.rs  gantt_group_by.rs  gantt_job_color.rs  gantt_sorting.rs  job_details.rs  job_table.rs  metric_box.rs  mod.rs  time_selector.rs
src/views/components/dashboard_components/: job_table.rs  job_table_col_selection.rs  job_table_sorting.rs  metric_box.rs  metric_chart.rs  metric_grid.rs  mod.rs
src/views/main_page/: anthentification.rs  dashboard.rs  gantt.rs  mod.rs
src/views/menu/: filtering.rs  menu.rs  mod.rs  options.rs  tools.rs
