[package]
name = "rust-dashboard-app"
version = "1.1.0"
edition = "2021"
authors = ["Romain MIRAS <romain.miras@gmail.com>", "Alexandre ARLE <arle.alexandre@protonmail.com>", "Amaury GOGUILLOT <goguillot.amaury@gmail.com>", "Rémi DEL MEDICO <redelmedico@gmail.com>"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
egui = "0.30.0"
eframe = "0.30.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
egui_extras = "0.30.0"
rust-i18n = "3.1.2"
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }
rand = "0.8"

strum = "0.24"
strum_macros = "0.24"
egui_plot = "0.30.0"
chrono-tz = "0.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["Performance","Document", "Window", "Element"] }
js-sys = "0.3"
log = "0.4"
console_error_panic_hook = "0.1.7"

[features]
serde = []
